--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
 		<a href="./lessonThree.html">Lesson 3</a>
 		<a href="./lessonFour.html">Lesson 4</a>
 		<a href="./theMission.html">The Mission</a>
-		<a href="./about.html">About</a>
+		<a href="./about.html">AbouT</a>
 		<a href="javascript:void(0);" class="icon" onclick="myFunction()">
 		  <i class="fa fa-bars"></i>
 		</a>
@@ -31,13 +31,12 @@
 		<h1 class="titleOfPage" style="color:#bafc03">SAVE THE SPACE CATS</h1>
 
 		<img class="center" id="spaceCat" src="https://cdn.dribbble.com/users/113499/screenshots/7146093/space-cat.png">
-		<div id="whiteText">
-			<h2 class="blackBackground" style="color:white">
-				We need YOUR help! 
+			<h2 class="blackBackground" id="textCenter" style="font-family: 'spaceregular', Arial, sans-serif; font-size: 68px; color:#8a3ea3; letter-spacing: 4px;">
+				We need YOUR help!
 			</h2>
-			<h2 class="blackBackground" style="color:white">
-				The Astronaut Cats are stuck in space!!! 
-			</h2>
+			<h3 class="blackBackground" style="color:white">
+				The Astronaut Cats are stuck in space!
+			</h3>
 			<h3 class="blackBackground" style="color:white">
 				You must complete four lessons. 
 				Each lesson will teach about space technology.
@@ -45,7 +44,9 @@
 			<h3 class="blackBackground" style="color:white">
 				The fate of the Space Cats Depends on you!
 			</h3>
-		</div>
+			<h3 class="blackBackground" style="color:white">
+				Below is list of everything you need to do.
+			</h3>
 		<div class="container" class="blackBackground" class="removeWeird" style="color:white">
 			<ul class="myUL">
 				<li><a href="./lessonOne.html" style="text-decoration: none">Lesson One</a></li>
