--- a/lessonFour.html
+++ b/lessonFour.html
@@ -15,7 +15,7 @@
             <a href="./lessonThree.html">Lesson 3</a>
             <a href="./lessonFour.html" class="active">Lesson 4</a>
             <a href="./theMission.html">The Mission</a>
-            <a href="./about.html">About</a>
+            <a href="./about.html">AbouT</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
               <i class="fa fa-bars"></i>
             </a>
@@ -23,7 +23,7 @@
           <h1 class="titleOfPage" style="color:#bafc03">LESSON FOUR</h1>
 
         <img src=""/>
-        <h2 class="blackBackground" style="color:white">
+        <h2 class="blackBackground" id="textCenter" style="font-family: 'spaceregular', Arial, sans-serif; font-size: 40px; color:#8a3ea3; letter-spacing: 4px;">
             Time to CODE
         </h2>
 
@@ -62,7 +62,7 @@
             Console.log(""); is a great tool to use!
          </h3>
 
-         <img class="center" src="spacceeeCat.PNG"/>
+         <img class="center" style="width:250px" style="height:200px" src="spacceeeCat.PNG"/>
 
          <h3 class="blackBackground" style="color:white">
             You now know how to write a line of code! Let's take the quiz and go save those Cats!
@@ -91,7 +91,8 @@
                 <span class="text">It's the worst tool :(</span>
                 </label>
             </section>
-
+        </form>
+        <form>
             <section class="dark">
                 <h1 class="titleRadioButton">What would console.log("Coding is cool!") print out?</h1>
             
@@ -113,7 +114,8 @@
                 <span class="text">Coding is cool!</span>
                 </label>
             </section>
-
+        </form>
+        <form>
             <section class="dark">
                 <h1 class="titleRadioButton">What does debugging mean?</h1>
             
@@ -138,11 +140,15 @@
             </section>
         </form>
 
-        <h3 class="blackBackground" style="color:white">
+        <container id="centerButtonButton" class="buttonSubmit" class="checkTheAnswers"><button>Submit</button></container>
+
+        <br>
+
+        <h3 class="blackBackground" id="textCenter" style="color:white">
             You are a trained computer genius.
         </h3>
 
-        <h3 class="blackBackground" style="color:white">
+        <h3 class="blackBackground" id="textCenter" style="color:white">
             You are ready for The Mission!
         </h3>
 
