--- a/lessonOne.html
+++ b/lessonOne.html
@@ -16,7 +16,7 @@
             <a href="./lessonThree.html">Lesson 3</a>
             <a href="./lessonFour.html">Lesson 4</a>
             <a href="./theMission.html">The Mission</a>
-            <a href="./about.html">About</a>
+            <a href="./about.html">AbouT</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
               <i class="fa fa-bars"></i>
             </a>
@@ -24,7 +24,7 @@
           <h1 class="titleOfPage" style="color:#bafc03">
             LESSON ONE
         </h1>
-        <h2 class="blackBackground" style="color:white" id="center">
+        <h2 class="blackBackground" id="textCenter" style="font-family: 'spaceregular', Arial, sans-serif; font-size: 40px; color:#8a3ea3; letter-spacing: 4px;">
             Computer Parts
         </h2>
 
@@ -110,11 +110,13 @@
             
             </section>
 
-            <container class="checkTheAnswers"><button>submit</button></container>
+            <br>
+
+            <container id="centerButtonButton" class="buttonSubmit" class="checkTheAnswers"><button>Submit</button></container>
 
         </form>
 
-        <h3 class="blackBackground" style="color:white">
+        <h3 class="blackBackground" id="textCenter" style="color:white">
             When you finish - go to Lesson Two!
         </h3>
         
