--- a/lessonOne.html
+++ b/lessonOne.html
@@ -103,7 +103,7 @@
                 </label>
             
                 <label>
-                <input id="inputRadio" type="radio" name="dark">
+                <input type="radio" name="dark">
                 <span class="design"></span>
                 <span class="text">T-shirt</span>
                 </label>
@@ -112,9 +112,9 @@
 
             <br>
 
-            <button  id="centerButtonButton" class="buttonSubmit">Submit</button>
+            <button id="centerButtonButton" class="buttonSubmit">Submit</button>
             
-            <container class="checkTheAnswers"></container>
+            <container class="checkTheAnswers answerColor"></container>
         </form>
 
         <h3 class="blackBackground" id="textCenter" style="color:white">
