--- a/home.html
+++ b/home.html
@@ -31,20 +31,20 @@
 		<h1 class="titleOfPage" style="color:#bafc03">SAVE THE SPACE CATS</h1>
 
 		<img class="center" id="spaceCat" src="https://cdn.dribbble.com/users/113499/screenshots/7146093/space-cat.png">
-			<h2 class="blackBackground" id="textCenter" style="font-family: 'spaceregular', Arial, sans-serif; font-size: 68px; color:#8a3ea3; letter-spacing: 4px;">
+			<h2 class="blackBackground" id="textCenter" style="font-family: 'spaceregular', Arial, sans-serif; font-size: 50px; color:#8a3ea3; letter-spacing: 4px;">
 				We need YOUR help!
 			</h2>
-			<h3 class="blackBackground" style="color:white">
+			<h3 class="blackBackground aboutPage" style="color:white">
 				The Astronaut Cats are stuck in space!
 			</h3>
-			<h3 class="blackBackground" style="color:white">
+			<h3 class="blackBackground aboutPage" style="color:white">
 				You must complete four lessons. 
 				Each lesson will teach about space technology.
 			</h3>
-			<h3 class="blackBackground" style="color:white">
+			<h3 class="blackBackground aboutPage" style="color:white">
 				The fate of the Space Cats Depends on you!
 			</h3>
-			<h3 class="blackBackground" style="color:white">
+			<h3 class="blackBackground aboutPage" style="color:white">
 				Below is list of everything you need to do.
 			</h3>
 		<div class="container" class="blackBackground" class="removeWeird" style="color:white">
