--- a/lessonFour.html
+++ b/lessonFour.html
@@ -145,8 +145,8 @@
             <container class="checkTheAnswers answerColor"></container>
         </form>
 
-        <h3 class="blackBackground" id="textCenter" style="color:white">
-            When you finish - go to The Mission!
+        <h3 class="blackBackground aboutPage" id="textCenter" style="color:white">
+            When you finish - go to <a href="./theMission.html" style="color: #bafc03">The Mission!</a>
         </h3>
         
           <script src="./profile.js" defer></script>
