--- a/lessonOne.html
+++ b/lessonOne.html
@@ -39,6 +39,8 @@
         <section>
             <img class="center" src="https://static.vecteezy.com/system/resources/previews/008/673/889/non_2x/computer-main-parts-simple-but-detailed-design-flat-design-style-illustration-vector.jpg"/>
         </section>
+        <br>
+        <br>
         <form>
             <section class="dark">
 
@@ -117,8 +119,8 @@
             <container class="checkTheAnswers answerColor"></container>
         </form>
 
-        <h3 class="blackBackground" id="textCenter" style="color:white">
-            When you finish - go to Lesson Two!
+        <h3 class="blackBackground aboutPage" id="textCenter" style="color:white">
+            When you finish - go to <a href="./lessonTwo.html" style="color: #bafc03">Lesson Two</a>
         </h3>
         
           <script src="./profile.js" defer></script>
