--- a/lessonThree.html
+++ b/lessonThree.html
@@ -104,7 +104,8 @@
             Like Python, it can write programs. It can also write apps that can run on phones! The logo also looks like a hot chocolate! :)
         </h3>
 
-        <div></div>
+        <br>
+        <br>
 
         <form>
             <section class="dark">
@@ -184,8 +185,8 @@
             <container class="checkTheAnswers answerColor"></container>
         </form>
 
-        <h3 class="blackBackground" id="textCenter" style="color:white">
-            When you finish - go to Lesson Four!
+        <h3 class="blackBackground aboutPage" id="textCenter" style="color:white">
+            When you finish - go to <a href="./lessonFour.html" style="color: #bafc03">Lesson Four</a>
         </h3>
         
           <script src="./profile.js" defer></script>
