--- a/lessonTwo.html
+++ b/lessonTwo.html
@@ -40,6 +40,8 @@
         <section>
             <img class="center" src="https://thumbs.dreamstime.com/b/print-197254303.jpg"/>
         </section>
+        <br>
+        <br>
         <form>
             <section class="dark">
 
@@ -118,8 +120,8 @@
             <container class="checkTheAnswers answerColor"></container>
         </form>
 
-        <h3 class="blackBackground" id="textCenter" style="color:white">
-            When you finish - go to Lesson Three!
+        <h3 class="blackBackground aboutPage" id="textCenter" style="color:white">
+            When you finish - go to <a href="./lessonThree.html" style="color: #bafc03">Lesson Three</a>
         </h3>
         
           <script src="./profile.js" defer></script>
