--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
         <link rel="stylesheet" href="collectReward.css" type="text/css" charset="utf-8" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.27.2/axios.min.js" integrity="sha512-odNmoc1XJy5x1TMVMdC7EMs3IVdItLPlCeL5vSUPN2llYKMJ2eByTTAIiiuqLg+GdNr9hF6z81p27DArRFKT7A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     </head>
     <body>
         <div class="topnav" id="myTopnav">
@@ -72,10 +73,10 @@
 
           <h2 class="blackBackground" id="textCenter" style="font-family: 'spaceregular', Arial, sans-serif; font-size: 30px; color:#bafc03; letter-spacing: 4px;">
             Comments
-        </h2>
+            </h2>
 
-          <container></container>
+          <container id="allTheComments"></container>
 
-        <script scr="./collectYouReward.js" defer></script>
+        <script src="./about.js" defer></script>
     </body>
 </html>
