--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@
 				Each lesson will teach about space technology.
 			</h3>
 			<h3 class="blackBackground aboutPage" style="color:white">
-				The fate of the Space Cats Depends on you!
+				The fate of the Space Cats depends on you!
 			</h3>
 			<h3 class="blackBackground aboutPage" style="color:white">
 				Below is list of everything you need to do.
