--- a/lessonOne.html
+++ b/lessonOne.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div class="topnav" id="myTopnav">
-            <a href="./home.html">Home</a>
+            <a href="./index.html">Home</a>
             <a href="./lessonOne.html" class="active">Lesson 1</a>
             <a href="./lessonTwo.html">Lesson 2</a>
             <a href="./lessonThree.html">Lesson 3</a>
